[metadata]
name = graphexec
version = attr: graphexec.VERSION
description = Execute litegraph.js graphs server-side
keywords = litegraph
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: Flask
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
install_requires =
    Jinja2
    Flask
    pydantic
    PyYAML
packages = graphexec
python_requires = >=3.9

[options.entry_points]
console_scripts =
    graphexec = graphexec.cli:main
    graphexec-generate-js-module = graphexec.generate_js_module:main
    graphexec-server = graphexec.server:main

[options.extras_require]
dev =
    black
    mypy
    types-PyYAML
